--- a/content/pages/work/glimmer/scss/_browsing.scss
+++ b/content/pages/work/glimmer/scss/_browsing.scss
@@ -1,83 +1,66 @@
 .browsing {
-  padding: 10px 0 0 0;
+  margin-bottom: $baseLineHeight;
+
+  h2 {
+    font: {
+      family: Times New Roman, Times, Serif;
+      style: italic;
+      size: 13px;
+      weight: normal;
+    }
+    color: #918277;
+    text-align: center;
+  }
 
   .nav {
-//    @include center;
-//    margin: 20px auto 0;
     display: block;
-//    min-height: 35px;
-//    padding: 10px 0 0;
+    border: none;
+    text-align: center;
+    position: relative;
 
-    .head {
-      font: {
-        family: Times New Roman, Times, Serif;
-        style: italic;
+    > li {
+
+      > a {
+        display: block;
+        @include nav-link-font($black);
+        letter-spacing: 2px;
+        font: {
+          size: 20px;
+          weight: 700;
+        };
+        padding: 7px 4px 5px 4px;
+        border: 4px solid lighten($black, 5%);
+        @include border-radius(3px);
+
+        &:hover {
+          @extend .nav-link;
+          color: $white;
+//          background: lighten($black, 5%);
+          background: lighten($black, 5%) url($bimg-dark) repeat;
+        }
+
       }
-      color: #918277;
-    }
 
-    .nav-ul {
-//      @include center;
-      display: block;
-      border: none;
-      padding: 0;
-      margin: 15px 0;
-
-      .li {
-        @include inline-block;
-        position: relative;
-//        cursor: pointer;
-//        padding: 12px 0;
-//        margin: 0;
-
-        .link {
-          display: block;
-          @include nav-link-font($black);
-          letter-spacing: 2px;
-          font: {
-            size: 20px;
-            weight: 700;
-          };
-          padding: 7px 4px 5px 4px;
-          border: 4px solid lighten($black, 5%);
-          @include border-radius(3px);
-          width: 200px;
-
-          &:hover {
-            @extend .nav-link;
-            color: $white;
-            background: lighten($black, 5%);
-          }
-
-        }
-
-        &:hover > .drop-ul {
-          display: block;
-        }
+      &:hover > .drop-ul {
+        display: block;
+      }
 
 //        &:focus > .drop-ul {
 //          display: block;
 //        }
 
-        .drop-ul {
-          @include bar($black, $bimg-dark, 4px 4px 0 0);
-          @include box-shadow(rgba(0,0,0,0.32) 0 0 10px);
-          display: none;
-          position: absolute;
-          padding: 0;
-          top: 40px;
-          left: -372px; // TODO: @media
+      .drop-ul {
+        @include bar($black, $bimg-dark, 4px 4px 0 0);
+        @include box-shadow(rgba(0,0,0,0.32) 0 0 10px);
+//        display: none;
+        position: absolute;
+        padding: 0px;
+        top: 40px;
+        left: -$gridGutterWidth; // TODO: @media
 
-          height: 320px;
-
-          .li {
-            display: inline-block;
-            padding: 60px;
-            margin: 15px 15px 0 0;
-            background: $white;
-          }
-        }
+        height: 320px;
       }
     }
   }
+
 }
