--- a/views/_zine/glimmer/_dropmenu.haml
+++ b/views/_zine/glimmer/_dropmenu.haml
@@ -1,7 +1,13 @@
-.nav
-  %span.head Browsing:
-  %ul.nav-ul
-    %li.li
-      %a.link(href="#") All Items
-      %ul.drop-ul.sixteen.columns
-        %li.li 1
+.container
+  %h2 Browsing:
+  %ul.nav
+    %li.span4.offset4
+      %a(href="#") All Items
+      .drop-ul.span12
+        %ul.thumbnails
+          - (1...10).each do
+            %li.span2
+              .thumbnail.f
+                %img(src="http://placehold.it/204x122")
+                %h4 label
+                %p caption
