- use guard-livereload - add page collections

--- a/content/pages/work/glimmer/collections.haml
+++ b/content/pages/work/glimmer/collections.haml
@@ -1,7 +1,7 @@
 Layout: work
 Template: self
-Title: All Items
-label: search
+Title: Collections
+label: browsing
 / Date: Jan 2012
 
 /
@@ -13,7 +13,7 @@ label: search
   /
     Browsing
     ============================================================================
-  .search
+  .browsing
     = partial "_zine/glimmer/dropmenu"
 
   /
@@ -25,7 +25,7 @@ label: search
         %li.span3
           .item
             %a(href="#")
-              %img.p(src="http://placehold.it/204x200")
+              %img.p(src="http://placehold.it/204x310")
             %h4 name
             %span.label.label-warning info
 
