--- a/content/pages/work/glimmer/home.haml
+++ b/content/pages/work/glimmer/home.haml
@@ -1,7 +1,7 @@
 Layout: work
 Template: self
-Title: Glimmer @ Taobao
-Class: glimmer
+Title: Home
+label: feature
 / Date: Jan 2012
 
 
@@ -38,12 +38,10 @@ Class: glimmer
     ============================================================================
   .marketing
     %ul.thumbnails
-      - (1...8).each do
+      - (0...6).each do
         %li.span4
           .thumbnail.f
-            %img(src="http://placehold.it/284x170")
-            %h4 label
-            %p caption
+            %img(src="http://placehold.it/284x200")
 
   / /marketing
 .ft
