--- a/content/pages/work/glimmer/scss/application.scss
+++ b/content/pages/work/glimmer/scss/application.scss
@@ -4,6 +4,9 @@ $black: #292929;
 $blue: #12aee8;
 $orange: #f27b04;
 
+$linkColor: $blue;
+$infoText: $blue;
+
 $assets: "/assets/glimmer/assets/images";
 $bimg-dark: "#{$assets}/background1.jpg";
 $bimg-light: "#{$assets}/texture.png";
