--- a/content/pages/work/glimmer/scss/_marketing.scss
+++ b/content/pages/work/glimmer/scss/_marketing.scss
@@ -5,7 +5,7 @@
     text-align: center;
   }
 
-  .f, .p {
+  .f, .p, .c {
     padding: 7px;
     background: rgba($white,0.3) url($bimg-light) repeat 0 0;
     border: 1px solid lighten($black, 65%);
@@ -13,6 +13,18 @@
 
     &:hover {
       border: 1px solid lighten($black, 30%);
+    }
+  }
+
+//  .c {
+//    @extend .f;
+//    @include box-shadow(none);
+//  }
+
+  .c1, .c2, .c3, .c4, .c5 {
+    text-align: center;
+    h4, span {
+      display: none;
     }
   }
 
