Out of passion T_T - collections page almost done - make scss partial more clean - more need to be done...

--- a/content/pages/work/glimmer/collections.haml
+++ b/content/pages/work/glimmer/collections.haml
@@ -29,35 +29,41 @@ Url: collections
       %p Collection One
       %ul.thumbnails
         %li.span4
-          %a(href="#")
-            %img.c(src="http://placehold.it/280x480")
-          %h4 name
-          %span.label.label-warning info
+          .thumbnail.box.light.c
+            %a(href="#")
+              %img(src="http://placehold.it/280x480")
+            %h4 name
+            %span.label.label-warning info
         %li.span3
-          %a(href="#")
-            %img.c(src="http://placehold.it/200x220")
-          %h4 name
-          %span.label.label-warning info
+          .thumbnail.box.light.c
+            %a(href="#")
+              %img(src="http://placehold.it/200x220")
+            %h4 name
+            %span.label.label-warning info
         %li.span3
-          %a(href="#")
-            %img.c(src="http://placehold.it/200x220")
-          %h4 name
-          %span.label.label-warning info
+          .thumbnail.box.light.c
+            %a(href="#")
+              %img(src="http://placehold.it/200x220")
+            %h4 name
+            %span.label.label-warning info
         %li.span2
-          %a(href="#")
-            %img.c(src="http://placehold.it/120x220")
-          %h4 name
-          %span.label.label-warning info
+          .thumbnail.box.light.c
+            %a(href="#")
+              %img(src="http://placehold.it/120x220")
+            %h4 name
+            %span.label.label-warning info
         %li.span3
-          %a(href="#")
-            %img.c(src="http://placehold.it/200x220")
-          %h4 name
-          %span.label.label-warning info
+          .thumbnail.box.light.c
+            %a(href="#")
+              %img(src="http://placehold.it/200x220")
+            %h4 name
+            %span.label.label-warning info
         %li.span5
-          %a(href="#")
-            %img.c(src="http://placehold.it/360x220")
-          %h4 name
-          %span.label.label-warning info
+          .thumbnail.box.light.c
+            %a(href="#")
+              %img(src="http://placehold.it/360x220")
+            %h4 name
+            %span.label.label-warning info
 
     /
       Collection Two
@@ -68,10 +74,11 @@ Url: collections
       %ul.thumbnails
         - (0...6).each do
           %li.span4
-            %a(href="#")
-              %img.c(src="http://placehold.it/280x220")
-            %h4 name
-            %span.label.label-warning info
+            .thumbnail.box.light.c
+              %a(href="#")
+                %img(src="http://placehold.it/280x220")
+              %h4 name
+              %span.label.label-warning info
 
     /
       Collection Three
@@ -82,32 +89,32 @@ Url: collections
       %ul.thumbnails
         %li.span5
           %a(href="#")
-            %img.c(src="http://placehold.it/360x320")
+            %img.box.light.c(src="http://placehold.it/360x320")
           %h4 name
           %span.label.label-warning info
         %li.span4
           %a(href="#")
-            %img.c(src="http://placehold.it/280x320")
+            %img.box.light.c(src="http://placehold.it/280x320")
           %h4 name
           %span.label.label-warning info
         %li.span3
           %a(href="#")
-            %img.c(src="http://placehold.it/200x320")
+            %img.box.light.c(src="http://placehold.it/200x320")
           %h4 name
           %span.label.label-warning info
         %li.span3
           %a(href="#")
-            %img.c(src="http://placehold.it/200x220")
+            %img.box.light.c(src="http://placehold.it/200x220")
           %h4 name
           %span.label.label-warning info
         %li.span2
           %a(href="#")
-            %img.c(src="http://placehold.it/120x220")
+            %img.box.light.c(src="http://placehold.it/120x220")
           %h4 name
           %span.label.label-warning info
         %li.span7
           %a(href="#")
-            %img.c(src="http://placehold.it/520x220")
+            %img.box.light.c(src="http://placehold.it/520x220")
           %h4 name
           %span.label.label-warning info
     /
@@ -119,32 +126,32 @@ Url: collections
       %ul.thumbnails
         %li.span6
           %a(href="#")
-            %img.c(src="http://placehold.it/440x220")
+            %img.box.light.c(src="http://placehold.it/440x220")
           %h4 name
           %span.label.label-warning info
         %li.span3
           %a(href="#")
-            %img.c(src="http://placehold.it/200x220")
+            %img.box.light.c(src="http://placehold.it/200x220")
           %h4 name
           %span.label.label-warning info
         %li.span3
           %a(href="#")
-            %img.c(src="http://placehold.it/200x220")
+            %img.box.light.c(src="http://placehold.it/200x220")
           %h4 name
           %span.label.label-warning info
         %li.span3
           %a(href="#")
-            %img.c(src="http://placehold.it/200x220")
+            %img.box.light.c(src="http://placehold.it/200x220")
           %h4 name
           %span.label.label-warning info
         %li.span3
           %a(href="#")
-            %img.c(src="http://placehold.it/200x220")
+            %img.box.light.c(src="http://placehold.it/200x220")
           %h4 name
           %span.label.label-warning info
         %li.span6
           %a(href="#")
-            %img.c(src="http://placehold.it/440x220")
+            %img.box.light.c(src="http://placehold.it/440x220")
           %h4 name
           %span.label.label-warning info
     /
@@ -156,32 +163,32 @@ Url: collections
       %ul.thumbnails
         %li.span8
           %a(href="#")
-            %img.c(src="http://placehold.it/580x440")
+            %img.box.light.c(src="http://placehold.it/580x440")
           %h4 name
           %span.label.label-warning info
         %li.span2
           %a(href="#")
-            %img.c(src="http://placehold.it/120x120")
+            %img.box.light.c(src="http://placehold.it/120x120")
           %h4 name
           %span.label.label-warning info
         %li.span2
           %a(href="#")
-            %img.c(src="http://placehold.it/120x120")
+            %img.box.light.c(src="http://placehold.it/120x120")
           %h4 name
           %span.label.label-warning info
         %li.span2
           %a(href="#")
-            %img.c(src="http://placehold.it/120x120")
+            %img.box.light.c(src="http://placehold.it/120x120")
           %h4 name
           %span.label.label-warning info
         %li.span2
           %a(href="#")
-            %img.c(src="http://placehold.it/120x120")
+            %img.box.light.c(src="http://placehold.it/120x120")
           %h4 name
           %span.label.label-warning info
         %li.span4
           %a(href="#")
-            %img.c(src="http://placehold.it/280x120")
+            %img.box.light.c(src="http://placehold.it/280x120")
           %h4 name
           %span.label.label-warning info
 
