--- a/content/pages/work/glimmer/home.haml
+++ b/content/pages/work/glimmer/home.haml
@@ -16,17 +16,17 @@ Url: home
     Feature
     ============================================================================
   .feature
-    .carousel.slide.container
+    .carousel.slide.box.light.container
       .carousel-inner
         .item.active
           %img(src="http://placehold.it/900x400")
-          %span.dark.lb
+          %span.tag.dark.lb
             %ol
               %li
                 %a(href="#") link 1
               %li
                 %a(href="#") link 2 long long long long
-          %span.light.rt
+          %span.tag.light.rt
             %ul
               %li
                 %a(href="#") link 3
@@ -41,7 +41,7 @@ Url: home
     %ul.thumbnails
       - (0...6).each do
         %li.span4
-          .thumbnail.f
+          .thumbnail.box.light.f
             %img(src="http://placehold.it/284x200")
 
   / /marketing
