--- a/content/pages/work/glimmer/shop.haml
+++ b/content/pages/work/glimmer/shop.haml
@@ -24,9 +24,9 @@ Url: shop
     %ul.thumbnails
       - (1...10).each do
         %li.span3
-          .item
+          .thumbnail.box.light.p
             %a(href="#")
-              %img.p(src="http://placehold.it/204x200")
+              %img(src="http://placehold.it/204x200")
             %h4 name
             %span.label.label-warning info
 
