--- a/content/pages/work/glimmer/scss/_header.scss
+++ b/content/pages/work/glimmer/scss/_header.scss
@@ -9,24 +9,20 @@
     height: 100px;
   }
 
-  .mastnav {
+  .mastnav .nav {
+    padding: 40px 0 0;
 
-      .nav {
-        padding: 40px 0 0;
-
-        > li {
-          display: inline-block;
-          padding: 0 25px 0 21px;
-          margin: 0;
-          &:first-child {
-            padding-left: 0;
-          }
-          &:last-child {
-            padding-right: 0;
-            border-right: 0;
-          }
-        }
+    > li {
+      display: inline-block;
+      padding: 0 25px 0 21px;
+      margin: 0;
+      &:first-child {
+        padding-left: 0;
       }
-
+      &:last-child {
+        padding-right: 0;
+        border-right: 0;
+      }
+    }
   }
 }
